<resources>
    <string name="app_name">ExploreCity</string>
    <string name="title_activity_maps">ExploreCity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="reference">reference</string>
    <string name="restaurant">restaurant</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="atm">atm</string>
    <string name="hospital">hospital</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="position">Position</string>
    <string name="description">description</string>
    <string name="Hospitals">Hospitals</string>
    <string name="ATMs">ATMs</string>
    <string name="Hotels">Hotels</string>
    <string name="current_pos">My Current Position</string>
    <string name="failure">onFailure</string>
    <string name="india">India</string>
    <string name="hotel_name">Hotel Aurora Towers</string>
    <string name="search_place">Search for a Place</string>
    <string name="search_city">Search City</string>
    <string name="ExploreCity">ExploreCity</string>
    <string name="usercheckedIns">user checkedIns</string>
    <string name="Address">Address</string>
    <string name="details_address">Hotel Aurora Towers, No.9, Moledina Road, Pune, Maharashtra 411001</string>
    <string name="call">Call</string>
    <string name="mob_no">020 26131818</string>
    <string name="Type">Type</string>
    <string name="CasualDining">Casual Dining</string>
    <string name="Cuisines">Cuisines</string>
    <string name="food_type">Fast Food, North Indian</string>
    <string name="Reviews">Reviews</string>
    <string name="total_reviews">(Total : 237)</string>
    <string name="rating">Rating : 7.2/10</string>

</resources>
