<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorlayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:expandedTitleMarginStart="@dimen/dimen_70">

        <android.support.design.widget.AppBarLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_230"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/CollapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_hotel"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtRating"
                        android:layout_width="@dimen/dimen_20"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:layout_marginRight="@dimen/dimen_20"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:text="4.2"
                        android:textSize="@dimen/dimen_14"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <ImageView
                        android:layout_width="@dimen/dimen_30"
                        android:layout_height="@dimen/dimen_30"
                        android:src="@drawable/ic_foursquare" />

                    <TextView
                        android:id="@+id/txtfour"
                        android:layout_width="@dimen/dimen_20"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:textSize="@dimen/dimen_14"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:text="@string/usercheckedIns"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:background="@color/colorBackgroundDetails" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen_10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Address"
                            android:textAllCaps="true"
                            android:textSize="@dimen/dimen_14"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/dimen_270"
                            android:layout_height="wrap_content"
                            android:text="@string/details_address" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/call"
                            android:textAllCaps="true"
                            android:textSize="@dimen/dimen_14"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mob_no" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Type"
                            android:textAllCaps="true"
                            android:textSize="@dimen/dimen_14"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/dimen_270"
                            android:layout_height="wrap_content"
                            android:text="@string/CasualDining" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Cuisines"
                            android:textAllCaps="true"
                            android:textSize="@dimen/dimen_14"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/dimen_270"
                            android:layout_height="wrap_content"
                            android:text="@string/food_type" />

                    </LinearLayout>

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="@dimen/dimen_105"
                        android:layout_height="@dimen/dimen_193"
                        tools:context="com.example.synerzip.explorecity.ui.DetailsActivity" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:background="@color/colorBackgroundDetails" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:text="@string/Reviews"
                        android:textAllCaps="true"
                        android:textSize="@dimen/dimen_16"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:text="@string/total_reviews"
                        android:textAllCaps="false"
                        android:textSize="@dimen/dimen_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:text="@string/rating"
                        android:textAllCaps="false"
                        android:textSize="@dimen/dimen_12" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:background="@color/colorBackgroundDetails" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </ListView>

                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>


